Bugfix: a change in the way the TemplateLoader was constructing package URLs had caused other functionality (like the JavaHelp add-on) to break.
git-svn-id: https://svn.code.sf.net/p/processdash/code/trunk@3645 560cad82-bde2-470f-af40-e4e1f8d6548a